# ray-trace-weekend

./: .gitignore  CMakeLists.txt  README.md
ray-trace-weekend/: CMakeLists.txt  base_numeric.h  camera.cpp  camera.h  color.h  frame.h  material.cpp  material.h  primitives.cpp  primitives.h  random_helper.cpp  random_helper.h  ray-trace-weekend.cpp  ray-trace-weekend.h  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  vec3.h
results/: README.md  gen_previews.sh  readme-header.md
tests/: CMakeLists.txt  hello_test.cpp
